# majic

./: .gitignore  .project  README.md  artifactory_license_keys.txt  conf.py  index.html  index.rst  pom.xml  settings.xml
build-helper-maven-plugin/: pom.xml
build-helper-maven-plugin/src/it/: settings.xml
build-helper-maven-plugin/src/it/simple-it/: CMakeLists.txt  pom.xml  verify.groovy
build-helper-maven-plugin/src/it/simple-it/module/: CMakeLists.txt  pom.xml
build-helper-maven-plugin/src/it/simple-it/module/src/: module.txt
build-helper-maven-plugin/src/it/simple-it/src/: test.txt
build-helper-maven-plugin/src/it/simple-it/src/test/resources/src/: CMakeLists.txt
build-helper-maven-plugin/src/main/java/com/sri/vt/majic/: MajicExtension.java  OperatingSystemInfo.java  Pack7ZipMojo.java  SetPropertiesMojo.java  ShowInfoMojo.java  Utils.java
build-helper-maven-plugin/src/main/java/com/sri/vt/majic/cmake/: ConfigureMojo.java
build-helper-maven-plugin/src/main/java/com/sri/vt/majic/component/cmake/: CMakeDirectoriesExtension.java
build-helper-maven-plugin/src/main/java/com/sri/vt/majic/mojo/: AbstractExecutorMojo.java  DependencyPropertiesMojo.java  ExecMojo.java  ExportArtifactsMojo.java  ImportArtifactsMojo.java  OperatingSystemInfo.java  Pack7ZipMojo.java  SetOsPropertiesMojo.java  SetPropertiesMojo.java  ShowInfoMojo.java  ShowOsInfoMojo.java
build-helper-maven-plugin/src/main/java/com/sri/vt/majic/mojo/cmake/: BuildConfigDirectoryHandling.java  CMakeCommandMojo.java  CMakeMojo.java  CTestMojo.java  (+13 more)
build-helper-maven-plugin/src/main/java/com/sri/vt/majic/util/: ArtifactHelper.java  BuildEnvironment.java  CMakeDirectories.java  MavenProjectHelper.java  OperatingSystemInfo.java  PathUtils.java  PropertiesValueSource.java  PropertyCache.java  PropertyUtils.java  StringCombinations.java  Version.java
build-helper-maven-plugin/src/main/java/org/apache/maven/plugin/clean/: Cleaner.java  GlobSelector.java
build-helper-maven-plugin/src/site/: site.xml
build-helper-maven-plugin/src/site/apt/: index.apt  usage.apt
build-helper-maven-plugin/src/site/apt/examples/: boost.apt  opencv.apt  vp.apt  vtcmake.apt
build-helper-maven-plugin/src/test/java/: TestPathUtils.java  TestStringCombinations.java  TestVersionParse.java
build-helper-maven-plugin/src/test/resources/: pom.xml
clavin-documentation/: pom.xml
clavin-documentation/src/: make-latex.sh
clavin-documentation/src/site/sphinx/: configureCentos.rst  configureGit.rst  gettingStarted.rst  jenkinsSetup.rst  linuxNotes.rst  maven.rst
clavin-documentation/src/site/sphinx/_themes/sphinx13/: layout.html
cmake-maven-parent/: pom.xml
demo/dependency/: pom.xml
demo/dependency/src/: CMakeLists.txt  artidep.cpp
demo/dependency/test/: main.cpp
demo/gtest/: pom.xml
demo/gtest/.svn/: entries
demo/gtest/assembly/: src.xml
demo/gtest/src/build-aux/.svn/: entries
demo/gtest/src/include/.svn/: all-wcprops  entries
demo/gtest/src/include/gtest/.svn/: all-wcprops
demo/gtest/src/include/gtest/internal/.svn/: entries
demo/gtest/src/m4/.svn/: entries
demo/gtest/src/msvc/.svn/: entries
demo/gtest/src/samples/.svn/: entries
demo/gtest/src/test/.svn/: all-wcprops
demo/gtest/src/xcode/.svn/: entries
demo/gtest/src/xcode/Samples/FrameworkSample/.svn/: entries
demo/gtest/src/xcode/Samples/FrameworkSample/WidgetFramework.xcodeproj/.svn/: entries
dependency/: CMakeLists.txt  pom.xml
dependency/src/: artidep.cpp
dependency/test/: CMakeLists.txt  main.cpp
distro-maven-plugin/: pom.xml
distro-maven-plugin/src/it/simple-it/: pom.xml
distro-maven-plugin/src/main/java/com/sri/vt/: OperatingSystemInfo.java  SetPropertiesMojo.java  ShowInfoMojo.java
distro-maven-plugin/src/test/resources/: pom.xml
doc/: index.html  pom.xml
doc/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/html/_sources/: index.txt
doc/html/_sources/doc/src/: clavin.txt  gettingStarted.txt
doc/html/doc/src/: aspnBuild.html  clavin.html  configureCentos.html  configureGit.html  configureUbuntu.html  configureVc10.html  gettingStarted.html  gitTips.html  jenkinsSetup.html  linuxNotes.html  todoList.html  usingGitSvn.html
doc/src/: aspnBuild.rst  conf.py  configureCentos.rst  configureGit.rst  configureUbuntu.rst  gettingStarted.rst  index.rst  jenkinsSetup.rst  make-all.sh  make-html.sh  make-latex.sh  update-website.sh  usingGitSvn.rst
doc/src/site/sphinx/: clavin.rst  conf.py  configureVc10.rst  gettingStarted.rst  gitTips.rst  index.rst  jenkinsSetup.rst  maven.rst
example-project/: CMakeLists.txt  pom.xml  settings-m2home.xml
examples/opencv/: CMakeLists.txt  pom.xml
examples/opencv/src/: main.cpp
gtest/: readme-checkout.txt
gtest/.svn/: all-wcprops
gtest/src/cmake/.svn/: entries
gtest/src/codegear/.svn/: entries
gtest/src/include/gtest/.svn/: entries
gtest/src/include/gtest/internal/.svn/: all-wcprops
gtest/src/make/.svn/: entries
gtest/src/scripts/.svn/: entries
gtest/src/scripts/test/.svn/: entries
gtest/src/src/.svn/: entries
gtest/src/test/.svn/: entries
gtest/src/xcode/Config/.svn/: entries
gtest/src/xcode/Resources/.svn/: entries
gtest/src/xcode/Samples/.svn/: entries
gtest/src/xcode/Scripts/.svn/: entries
gtest/src/xcode/gtest.xcodeproj/.svn/: entries
main/: pom.xml
majic-documentation/: pom.xml
majic-documentation/src/: make-html.sh
majic-documentation/src/site/sphinx/: artifactory.rst  bobParentPom.rst  buildHelperPlugin.rst  conf.py  configureCentos.rst  configureGit.rst  configureUbuntu.rst  configureVc10.rst  developerPrerequisites.rst  examples.rst  faq.rst  gettingStarted.rst  glossary.rst  index.rst  jenkinsJobSetup.rst  jenkinsServerSetup.rst  linuxNotes.rst  majicCMakeLifecycle.rst  maven-settings.rst  maven.rst  parentPom.rst  workingWithMajic.rst
majic-documentation/src/site/sphinx/_themes/sphinx13/: layout.html
majic-documentation/src/site/sphinx/_themes/sphinx13/static/: sphinx13.css
majic-parent/: pom.xml
samplepom/: CMakeLists.txt  pom.xml
src/site/: site.xml  site_en.xml
(+10 files in other folders)
